--- a/Buoi20/weather-app/src/components/style.module.css
+++ b/Buoi20/weather-app/src/components/style.module.css
@@ -30,3 +30,17 @@
 .infomarion {
     background-color: grey;
 }
+
+.maxSize {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background: rgba(240, 240, 240, 0.5);
+}
+
+.centerDisplay{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
